# compare-gen-ai-outputs

./: README.md  pyproject.toml  run_query_test.py
config/: models_config.yaml
notebooks/: compare_ai_models.ipynb  gen_ai_models.ipynb  query_one_model.ipynb
src/: __init__.py  model_interface.py
